--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,8 @@
     "noUncheckedIndexedAccess": true,
     "noImplicitOverride": true,
 
-    /* If transpiling with TypeScript: */
+    /* If transpiling with TypeScript and running in Node: */
+    /* Be sure to set type: module in package.json */
     "module": "nodenext",
     "outDir": "./build", // Output directory for compiled JS files
     "rootDir": "./src", // Root directory of your TypeScript files
